Fix minor layout bugs

--- a/src/stylesheets/AddRecipe.css
+++ b/src/stylesheets/AddRecipe.css
@@ -25,3 +25,7 @@
   position: absolute;
   left: 10px;
 }
+
+.MuiFormLabel-root.MuiInputLabel-root {
+  z-index: 0;
+}
