--- a/src/stylesheets/RecipeDetails.css
+++ b/src/stylesheets/RecipeDetails.css
@@ -1,9 +1,3 @@
-.MuiTypography-root.MuiTypography-h4.recipe-title {
-  font-family: var(--font-family);
-  font-weight: bold;
-  font-size: xx-large;
-}
-
 h6 + div {
   margin-top: 5px;
 }
